--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -17,12 +17,32 @@
   address =      {Boca Raton, FL},
 }
 
+@ARTICLE{chen:1999:MCE,
+  author =       {Chen, M-H and Shao, Q-M},
+  title =        {{M}onte {C}arlo Estimation of {B}ayesian Credible and {HPD}
+                  Intervals},
+  year =         {1999},
+  journal =      {Journal of Computational and Graphical Statistics},
+  volume =       {8},
+  number =       {1},
+  pages =        {69--92}
+}
+
 @BOOK{gamerman:1997:MCM,
   AUTHOR =       {Gamerman, D},
   TITLE =        {Markov Chain {M}onte {C}arlo: Stochastic Simulation for {B}ayesian Inference},
   PUBLISHER =    {Chapman \& Hall/CRC},
   YEAR =         {1997},
   address =      {Boca Raton, FL},
+}
+
+@ARTICLE{gelfand:1990:SBA,
+  AUTHOR =       {Gelfand, A E and Smith, A F M},
+  TITLE =        {Sampling based approaches to calculating marginal densities},
+  JOURNAL =      {Journal of the American Statistical Association},
+  YEAR =         {1990},
+  volume =       {85},
+  pages =        {398--409}
 }
 
 @ARTICLE{gelman:1992:IIS,
@@ -42,6 +62,16 @@
   year   = {2013},
   note   = {R package version 1.6-10},
   url    = {http://CRAN.R-project.org/package=arm},
+}
+
+@ARTICLE{geman:1984:SRG,
+  AUTHOR =       {Geman, S and Geman, D},
+  TITLE =        {Stochastic relaxation, {G}ibbs distributions, and the {B}ayesian restoration of images},
+  JOURNAL =      {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  YEAR =         {1984},
+  volume =       {6},
+  number =       {6},
+  pages =        {721--741},
 }
 
 @BOOK{gilks:1996:MCP,
@@ -121,7 +151,26 @@
   year =         {1996}
 }
 
-@misc{stan-software:2013,
+@ARTICLE{spiegelhalter:2002:BMM,
+  AUTHOR =       {Spiegelhalter, D J and Best, N G and Carlin, B P and
+                  van der Linde, A},
+  TITLE =        {{B}ayesian Measures of Model Complexity and Fit (with Discussion)},
+  JOURNAL =      {Journal of the Royal Statistical Society, Series B},
+  YEAR =         {2002},
+  volume =       {64},
+  number =       {4},
+  pages =        {583--639}
+}
+
+@BOOK{gelman:2013:bda,
+  AUTHOR =       {Gelman, A and Carlin, J B and Stern, H S and Dunson, D B
+                  and Vehtari, A V and Rubin D B},
+  TITLE =        {{B}ayesian Data Analysis: Third Edition},
+  PUBLISHER =    {CRC Press},
+  YEAR =         {2013},
+}
+
+@MISC{stan-software:2013,
   author = {{Stan Development Team}},
   year = {2013},
   title = {Stan: A {C++} library for probability and sampling},
