--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -55,6 +55,15 @@
   pages =        {457--511}
 }
 
+@ARTICLE{gelman:1996:EMJ,
+  AUTHOR =       {Gelman, A and Roberts, G O and Gilks, W R},
+  TITLE =        {Efficient {M}etropolis jumping rules},
+  JOURNAL =      {Bayesian Statistics},
+  YEAR =         {1996},
+  volume =       {5},
+  pages =        {599--607},
+}
+
 @MANUAL{gelman:2013:arm,
   title  = {{arm}: Data Analysis Using Regression and Multilevel/Hierarchical Models},
   author = {Gelman, A and Su, Y-S and Yajima, M and Hill, J and Pittau, M G and Kerman, J
@@ -62,6 +71,14 @@
   year   = {2013},
   note   = {R package version 1.6-10},
   url    = {http://CRAN.R-project.org/package=arm},
+}
+
+@BOOK{gelman:2013:bda,
+  AUTHOR =       {Gelman, A and Carlin, J B and Stern, H S and Dunson, D B
+                  and Vehtari, A V and Rubin D B},
+  TITLE =        {{B}ayesian Data Analysis: Third Edition},
+  PUBLISHER =    {CRC Press},
+  YEAR =         {2013},
 }
 
 @ARTICLE{geman:1984:SRG,
@@ -82,6 +99,35 @@
   address =      {Boca Raton, FL},
 }
 
+@ARTICLE{haario:2001:AMA,
+  AUTHOR =       {Haario, H and Saksman, E and Tamminen, J},
+  TITLE =        {An adaptive {M}etropolis algorithm},
+  JOURNAL =      {Bernoulli},
+  YEAR =         {2001},
+  volume =       {7},
+  pages =        {223--242},
+}
+
+@ARTICLE{hastings:1970:MCS,
+  AUTHOR =       {Hastings, W K},
+  TITLE =        {{M}onte {C}arlo sampling methods using {M}arkov chains and their
+                  applications},
+  JOURNAL =      {Biometrika},
+  YEAR =         {1970},
+  volume =       {57},
+  number =       {1},
+  pages =        {97--109}
+}
+
+@ARTICLE{hoffman:2011:nuts,
+  AUTHOR =       {Hoffman, M D and Gelman, A},
+  TITLE =        {The {N}o-{U}-{T}urn Sampler: Adaptively Setting Path Lengths
+                  in {H}amiltonian {M}onte {C}arlo},
+  JOURNAL =      {arXiv:1111.4246 [stat.CO]},
+  YEAR =         {2011},
+  url =          {http://arxiv.org/abs/1111.4246},
+}
+
 @ARTICLE{lunn:2009:BUGS,
   AUTHOR =       {Lunn, D and Spiegelhalter, D and Thomas, A and Best, N},
   TITLE =        {The {BUGS} project: Evolution, critique and future directions},
@@ -98,6 +144,36 @@
   year   = {2013},
   note   = {R package version 1.3-3},
   url    = {http://CRAN.R-project.org/package=MCMCpack},
+}
+
+@ARTICLE{metropolis:1953:ESC,
+  AUTHOR =       {Metropolis, N and Rosenbluth, A W and Rosenbluth, M N and
+                  Teller, A H and Teller, E},
+  TITLE =        {Equations of state calculations by fast computing machines},
+  JOURNAL =      {Journal of Chemical Physics},
+  YEAR =         {1953},
+  volume =       {21},
+  number =       {6},
+  pages =        {1087--1092},
+}
+
+@ARTICLE{neal:2003:SS,
+  author =       {Neal, R M},
+  title =        {Slice sampling (with discussion)},
+  year =         {2003},
+  journal =      {Annals of Statistics},
+  volume =       {31},
+  pages =        {705--767}
+}
+
+@INBOOK{neal:2011:hmc,
+  AUTHOR =       {Neal, Radford},
+  editor =       {Brooks, Steve and Gelman, Andrew and Jones, Galin L and Meng, Xiao-Li},
+  TITLE =        {Handbook of Markov Chain Monte Carlo},
+  CHAPTER =      {MCMC Using Hamiltonian Dynamics},
+  pages =        {113--162},
+  PUBLISHER =    {CRC Press},
+  YEAR =         {2011},
 }
 
 @MISC{neal:2012:grims,
@@ -135,6 +211,16 @@
   edition =      {2nd},
 }
 
+@ARTICLE{robert:2009:EAM,
+  AUTHOR =       {Roberts, G O and Rosenthal, J S},
+  TITLE =        {Examples of adaptive {MCMC}},
+  JOURNAL =      {Journal of Computational and Graphical Statistics},
+  YEAR =         {2009},
+  volume =       {18},
+  number =       {2},
+  pages =        {349--367},
+}
+
 @MANUAL{smith:2014:MCMC,
     title = {{MCMCsim}: {M}arkov Chain {M}onte {C}arlo Simulation Toolkit for julia},
     author = {Smith, B J},
@@ -162,12 +248,13 @@
   pages =        {583--639}
 }
 
-@BOOK{gelman:2013:bda,
-  AUTHOR =       {Gelman, A and Carlin, J B and Stern, H S and Dunson, D B
-                  and Vehtari, A V and Rubin D B},
-  TITLE =        {{B}ayesian Data Analysis: Third Edition},
-  PUBLISHER =    {CRC Press},
-  YEAR =         {2013},
+@ARTICLE{tierney:1994:MCE,
+  AUTHOR =       {Tierney, L},
+  TITLE =        {{M}arkov chains for exploring posterior distributions (with discussion)},
+  JOURNAL =      {Annals of Statistics},
+  YEAR =         {1994},
+  volume =       {22},
+  pages =        {1701--1762},
 }
 
 @MISC{stan-software:2013,
