--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -45,6 +45,15 @@
   pages =        {398--409}
 }
 
+@ARTICLE{gelfand:1990:IBI,
+  AUTHOR =       {Gelfand, A E and Hills, S and Racine-Poon, A and Smith, A F M},
+  TITLE =        {Illustration of {B}ayesian inference in normal data models using {G}ibbs sampling},
+  JOURNAL =      {Journal of the American Statistical Association},
+  YEAR =         {1990},
+  volume =       {85},
+  pages =        {972--985}
+}
+
 @ARTICLE{gelman:1992:IIS,
   AUTHOR =       {Gelman, A and Rubin, D B},
   TITLE =        {Inference from Iterative Simulation Using Multiple
@@ -79,6 +88,15 @@
   TITLE =        {{B}ayesian Data Analysis: Third Edition},
   PUBLISHER =    {CRC Press},
   YEAR =         {2013},
+}
+
+@ARTICLE{george:1993:CLD,
+  AUTHOR =       {George, E I and Makov, U E and Smith, A F M},
+  TITLE =        {Conjugate likelihood distributions},
+  JOURNAL =      {Scandinavian Journal of Statistics},
+  YEAR =         {1993},
+  volume =       {20},
+  pages =        {147--156},
 }
 
 @ARTICLE{geman:1984:SRG,
@@ -128,6 +146,14 @@
   url =          {http://arxiv.org/abs/1111.4246},
 }
 
+@BOOK{kalbfleisch:1985:PSI,
+  AUTHOR =       {Kalbfleisch, J G},
+  TITLE =        {Probability and Statistical Inference: Volume 2},
+  PUBLISHER =    {Springer-Verlag},
+  YEAR =         {1985},
+  address =      {New York},
+}
+
 @ARTICLE{lunn:2009:BUGS,
   AUTHOR =       {Lunn, D and Spiegelhalter, D and Thomas, A and Best, N},
   TITLE =        {The {BUGS} project: Evolution, critique and future directions},
@@ -167,7 +193,7 @@
 }
 
 @INBOOK{neal:2011:hmc,
-  AUTHOR =       {Neal, Radford},
+  AUTHOR =       {Neal, R M},
   editor =       {Brooks, Steve and Gelman, Andrew and Jones, Galin L and Meng, Xiao-Li},
   TITLE =        {Handbook of Markov Chain Monte Carlo},
   CHAPTER =      {MCMC Using Hamiltonian Dynamics},
