--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -25,7 +25,16 @@
   journal =      {Journal of Computational and Graphical Statistics},
   volume =       {8},
   number =       {1},
-  pages =        {69--92}
+  pages =        {69--92},
+}
+
+@ARTICLE{crowder:1978:BBA,
+  author =       {Crowder, M},
+  title =        {{B}eta-{B}inomial {ANOVA} for proportions},
+  year =         {1978},
+  journal =      {Applied Statistics},
+  volume =       {27},
+  pages =        {34--37},
 }
 
 @BOOK{gamerman:1997:MCM,
@@ -208,6 +217,14 @@
   year =         {2012},
   url =          {http://www.cs.toronto.edu/~radford/GRIMS.html},
   note =         {[Online; accessed 11-December-2103]},
+}
+
+@MANUAL{openbugs:2014:ex1,
+  title  = {OpenBUGS Examples Volume I},
+  author = {OpenBUGS Project Management Group},
+  year   = {2014},
+  note   = {version 3.2.3},
+  url =    {http://www.openbugs.net/Examples/Volumei.html},
 }
 
 @MANUAL{park:2013:cran,
