--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -1,3 +1,38 @@
+@BOOK{birkes:1993:AMR,
+  editor =       {Birkes, D and Dodge, Y},
+  TITLE =        {Alternative Methods of Regression},
+  PUBLISHER =    {Wiley},
+  YEAR =         {1993},
+  address =      {New York},
+}
+
+@ARTICLE{boch:1970:FRM,
+  AUTHOR =       {Boch, R D and Lieberman, M},
+  TITLE =        {Fitting a response model for n dichotomously scored items},
+  JOURNAL =      {Psychometrika},
+  YEAR =         {1970},
+  volume =       {35},
+  pages =        {179--197}
+}
+
+@ARTICLE{breslow:1984:EPV,
+  AUTHOR =       {Breslow, N E},
+  TITLE =        {Extra-{P}oisson variation in log-linear models},
+  JOURNAL =      {Applied Statistics},
+  YEAR =         {1984},
+  volume =       {33},
+  pages =        {38--44}
+}
+
+@ARTICLE{breslow:1993:AIG,
+  AUTHOR =       {Breslow, N E and Clayton, D G},
+  TITLE =        {Approximate inference in generalized linear mixed models},
+  JOURNAL =      {Journal of the American Statistical Association},
+  YEAR =         {1993},
+  volume =       {88},
+  pages =        {9--25}
+}
+
 @ARTICLE{brooks:1998:GMM,
   AUTHOR =       {Brooks, S and Gelman, A},
   TITLE =        {General Methods for Monitoring Convergence of Iterative
@@ -15,6 +50,16 @@
   PUBLISHER =    {Chapman \& Hall/CRC},
   YEAR =         {2011},
   address =      {Boca Raton, FL},
+
+}
+
+@ARTICLE{carlin:1992:ME2,
+  AUTHOR =       {Carlin, J B},
+  TITLE =        {Meta-analysis for 2 x 2 tables: a {B}ayesian approach},
+  JOURNAL =      {Statistics in Medicine},
+  YEAR =         {1992},
+  volume =       {11},
+  pages =        {141--159}
 }
 
 @ARTICLE{chen:1999:MCE,
@@ -35,6 +80,14 @@
   journal =      {Applied Statistics},
   volume =       {27},
   pages =        {34--37},
+}
+
+@BOOK{davies:1967:SMR,
+  AUTHOR =       {Davies, O L},
+  TITLE =        {Statistical Methods in Research and Production},
+  PUBLISHER =    {Olver \& Boyd},
+  YEAR =         {1967},
+  address =      {Edinburgh and London},
 }
 
 @BOOK{gamerman:1997:MCM,
@@ -298,6 +351,15 @@
   YEAR =         {1994},
   volume =       {22},
   pages =        {1701--1762},
+}
+
+@ARTICLE{thall:1990:SCM,
+  AUTHOR =       {Thall, P F and Vail, S C},
+  TITLE =        {Some covariance models for longitudinal count data with overdispersion},
+  JOURNAL =      {Biometrics},
+  YEAR =         {1990},
+  volume =       {46},
+  pages =        {657--671},
 }
 
 @MISC{stan-software:2013,
