--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -179,6 +179,15 @@
   address =      {Boca Raton, FL},
 }
 
+@ARTICLE{grieve:1987:ABS,
+  AUTHOR =       {Grieve, A P},
+  TITLE =        {Applications of {B}ayesian software: two examples},
+  JOURNAL =      {Statistician},
+  YEAR =         {1987},
+  volume =       {36},
+  pages =        {283--288},
+}
+
 @ARTICLE{haario:2001:AMA,
   AUTHOR =       {Haario, H and Saksman, E and Tamminen, J},
   TITLE =        {An adaptive {M}etropolis algorithm},
