--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -1,3 +1,11 @@
+@ARTICLE{bezanson:2012:JFD,
+  AUTHOR =       {Bezanson, J and Karpinski, S and Shah, V B and Edelman, A},
+  TITLE =        {Julia: a fast dynamic language for technical computing},
+  JOURNAL =      {arXiv:1209.5145 [cs.PL]},
+  YEAR =         {2012},
+  url =          {http://arxiv.org/abs/1209.5145},
+}
+
 @BOOK{birkes:1993:AMR,
   editor =       {Birkes, D and Dodge, Y},
   TITLE =        {Alternative Methods of Regression},
@@ -14,6 +22,15 @@
   volume =       {35},
   pages =        {179--197}
 }
+
+@BOOK{box:1973:BIS,
+  editor =       {Box, G E and Tiao, G C},
+  TITLE =        {Bayesian Inference in Statistical Analysis},
+  PUBLISHER =    {Addison Wesley},
+  YEAR =         {1973},
+  address =      {Reading, MA},
+}
+
 
 @ARTICLE{breslow:1984:EPV,
   AUTHOR =       {Breslow, N E},
@@ -50,7 +67,23 @@
   PUBLISHER =    {Chapman \& Hall/CRC},
   YEAR =         {2011},
   address =      {Boca Raton, FL},
+}
 
+@BOOK{brownlee:1965:STM,
+  editor =       {Brownlee, K A},
+  TITLE =        {Statistical Theory and Methodology in Science and Engineering},
+  PUBLISHER =    {Wiley},
+  YEAR =         {1965},
+  address =      {New York},
+}
+
+@ARTICLE{breslow:1993:AIG,
+  AUTHOR =       {Breslow, N E and Clayton, D G},
+  TITLE =        {Approximate inference in generalized linear mixed models},
+  JOURNAL =      {Journal American Statistical Association},
+  YEAR =         {1993},
+  volume =       {88},
+  pages =        {9--25}
 }
 
 @ARTICLE{carlin:1992:ME2,
@@ -73,6 +106,13 @@
   pages =        {69--92},
 }
 
+@TECHREPORT{clayton:1994:BAF,
+  AUTHOR =       {Clayton, D},
+  TITLE =        {{B}ayesian analysis of frailty models},
+  INSTITUTION =  {Medical Research Council Biostatistics Unit, Cambridge},
+  YEAR =         {1994},
+}
+
 @ARTICLE{crowder:1978:BBA,
   author =       {Crowder, M},
   title =        {{B}eta-{B}inomial {ANOVA} for proportions},
@@ -88,6 +128,36 @@
   PUBLISHER =    {Olver \& Boyd},
   YEAR =         {1967},
   address =      {Edinburgh and London},
+}
+
+@ARTICLE{dellaportas:1993:BIG,
+  author =       {Dellaportas, P and Smith, A F M},
+  title =        {{B}ayesian inference for generalized linear and proportional
+                  hazards model via {G}ibbs sampling},
+  year =         {1993},
+  journal =      {Applied Statistics},
+  volume =       {42},
+  pages =        {443--460},
+}
+
+@ARTICLE{ezzet:1993:REM,
+  author =       {Ezzet, F and Whitehead, J},
+  title =        {A random effects model for ordinal responses from a crossover trial},
+  year =         {1993},
+  journal =      {Statistics in Medicine},
+  volume =       {10},
+  pages =        {901--907},
+}
+
+@ARTICLE{frierich:1963:E6M,
+  author =       {Frierich, E and Gehan, E},
+  title =        {The effect of 6-mercaptopurine on the duration of steroid-induced
+                  remissions in acute leukaemia: a model for evaluation of other
+				  potentially useful therapy},
+  year =         {1963},
+  journal =      {Blood},
+  volume =       {21},
+  pages =        {699--716},
 }
 
 @BOOK{gamerman:1997:MCM,
@@ -217,6 +287,22 @@
   url =          {http://arxiv.org/abs/1111.4246},
 }
 
+@MISC{julia:2014,
+  author = {Bezanson, J and Karpinski, S and Shah, V B and {other contributors}},
+  year = {2014},
+  title = {{The Julia Language}},
+  note  = {version 0.2},
+  url = {http://julialang.org/}
+}
+
+@MANUAL{juliastats:2014:DP,
+  title  = {Distributions Package},
+  author = {{Julia Statistics}},
+  year   = {2014},
+  note   = {version 0.4},
+  url    = {https://github.com/JuliaStats/Distributions.jl},
+}
+
 @BOOK{kalbfleisch:1985:PSI,
   AUTHOR =       {Kalbfleisch, J G},
   TITLE =        {Probability and Statistical Inference: Volume 2},
@@ -235,12 +321,32 @@
   pages =        {3049--3067},
 }
 
+@ARTICLE{lindley:1972:BEL,
+  AUTHOR =       {Lindley, D V and Smith, A F M},
+  TITLE =        {Bayes estimates for the linear model (with discussion)},
+  JOURNAL =      {Journal of the Royal Statistical Society: Series B},
+  YEAR =         {1972},
+  volume =       {34},
+  pages =        {1--44},
+}
+
+Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model (with discussion). J Roy Statist Soc B, 34, 1-44.
+
 @MANUAL{martin:2013:MCP,
   title  = {{MCMCpack}: Markov Chain Monte Carlo {(MCMC)} Package},
   author = {Martin, A D and Quinn, K M and Park, J H},
   year   = {2013},
   note   = {R package version 1.3-3},
   url    = {http://CRAN.R-project.org/package=MCMCpack},
+}
+
+@ARTICLE{mcgilchrist:1991:RFS,
+  AUTHOR =       {McGilchrist, C and Aisbett, C},
+  TITLE =        {Regression with frailty in survival analysis},
+  JOURNAL =      {Biometrics},
+  YEAR =         {1991},
+  volume =       {47},
+  pages =        {461--466},
 }
 
 @ARTICLE{metropolis:1953:ESC,
@@ -307,12 +413,20 @@
   note =         {ISSN 1609-395X},
 }
 
+@BOOK{roche:1975:SM,
+  AUTHOR =       {Roche, A F and Wainer, H and Thissen, D},
+  TITLE =        {Skeletal maturity: The knee joint as a biological indicator},
+  PUBLISHER =    {Plenum},
+  YEAR =         {1975},
+  address =      {New York},
+}
+
 @BOOK{robert:2004:MCS,
   AUTHOR =       {Robert, C and Casella, G},
   TITLE =        {{M}onte {C}arlo Statistical Methods},
   PUBLISHER =    {Springer},
   YEAR =         {2004},
-  address =      {New York, NY},
+  address =      {New York},
   edition =      {2nd},
 }
 
@@ -369,6 +483,15 @@
   YEAR =         {1990},
   volume =       {46},
   pages =        {657--671},
+}
+
+@BOOK{thissen:1986:MUG,
+  AUTHOR =       {Thissen, D},
+  TITLE =        {{MULITLOG} Version 5: User's Guide},
+  PUBLISHER =    {Scientific Software},
+  YEAR =         {1986},
+  address =      {Mooresville, IN},
+  edition =      {5th},
 }
 
 @MISC{stan-software:2013,
