--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -502,13 +502,13 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   url = {http://mc-stan.org/}
 }
 
-@MANUAL{thomas:2012:ODM,
+@MANUAL{thomas:2014:ODM,
   TITLE =        {{OpenBUGS} Developer Manual},
   author =       {Thomas, A},
-  note =         {Version 3.2.2},
-  month =        {July},
-  year =         {2012},
-  url =          {http://www.openbugs.info/Manuals/Developer/Manual.html},
+  note =         {version 3.2.3},
+  month =        {March},
+  year =         {2014},
+  url =          {http://www.openbugs.net/Manuals/Developer/Manual.html},
 }
 
 @ARTICLE{wabersich:2013:EJT,
