--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -205,12 +205,12 @@
   pages =        {599--607},
 }
 
-@MANUAL{gelman:2013:arm,
+@MANUAL{gelman:2014:arm,
   title  = {{arm}: Data Analysis Using Regression and Multilevel/Hierarchical Models},
   author = {Gelman, A and Su, Y-S and Yajima, M and Hill, J and Pittau, M G and Kerman, J
             and Zheng, T and Dorie, V},
-  year   = {2013},
-  note   = {R package version 1.6-10},
+  year   = {2014},
+  note   = {R package version 1.7},
   url    = {http://CRAN.R-project.org/package=arm},
 }
 
@@ -241,12 +241,42 @@
   pages =        {721--741},
 }
 
+@INBOOK{geweke:1992:EAS,
+  AUTHOR =       {Geweke, J},
+  editor =       {Bernardo, J M and Berger, J O and Dawid, A P and Smith, A F M},
+  TITLE =        {{B}ayesian Statistics},
+  CHAPTER =      {Evaluating the Accuracy of Sampling-Based Approaches to
+                  Calculating Posterior Moments},
+  PUBLISHER =    {Oxford University Press},
+  YEAR =         {1992},
+  volume =       {4},
+  address =      {New York}
+}
+
+@ARTICLE{geyer:1992:PMC,
+  AUTHOR =       {Geyer, C J},
+  TITLE =        {Practical {M}arkov chain {M}onte {C}arlo},
+  JOURNAL =      {Statistical Science},
+  YEAR =         {1992},
+  volume =       {7},
+  pages =        {473--511},
+}
+
 @BOOK{gilks:1996:MCP,
   editor =       {Gilks, W R and Richardson, S and Spiegelhalter, D J},
   TITLE =        {Monte {C}arlo in Practice},
   PUBLISHER =    {Chapman \& Hall/CRC},
   YEAR =         {1996},
   address =      {Boca Raton, FL},
+}
+
+@ARTICLE{glynn:1991:EAV,
+  AUTHOR =       {Glynn, P W and Whitt, W},
+  TITLE =        {Estimating the asymptotic variance with batch means},
+  JOURNAL =      {Operations Research Letters},
+  YEAR =         {1991},
+  volume =       {10},
+  pages =        {431-435},
 }
 
 @ARTICLE{grieve:1987:ABS,
@@ -384,7 +414,7 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   author =       {Neal, R M},
   year =         {2012},
   url =          {http://www.cs.toronto.edu/~radford/GRIMS.html},
-  note =         {[Online; accessed 11-December-2103]},
+  note =         {[Online; accessed 5-March-2014]},
 }
 
 @MANUAL{openbugs:2014:ex1,
@@ -395,11 +425,11 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   url =    {http://www.openbugs.net/Examples/Volumei.html},
 }
 
-@MANUAL{park:2013:cran,
+@MANUAL{park:2014:cran,
   title  = {{CRAN} Task View: Bayesian Inference},
   author = {Park, J H},
-  year   = {2013},
-  note   = {version 2013-07-16},
+  year   = {2014},
+  note   = {version 2014-05-16},
   url    = {http://cran.r-project.org/web/views/Bayesian.html},
 }
 
@@ -494,11 +524,11 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   edition =      {5th},
 }
 
-@MISC{stan-software:2013,
+@MISC{stan-software:2014,
   author = {{Stan Development Team}},
-  year = {2013},
+  year = {2014},
   title = {Stan: A {C++} library for probability and sampling},
-  note  = {version 2.0},
+  note  = {version 2.2.0},
   url = {http://mc-stan.org/}
 }
 
