Documentation updates for Variate and MCMC types.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -363,7 +363,7 @@
 Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model (with discussion). J Roy Statist Soc B, 34, 1-44.
 
 @MANUAL{martin:2013:MCP,
-  title  = {{MCMCpack}: Markov Chain Monte Carlo {(MCMC)} Package},
+  title  = {{MCMCpack}: {M}arkov Chain {M}onte {C}arlo {(MCMC)} Package},
   author = {Martin, A D and Quinn, K M and Park, J H},
   year   = {2013},
   note   = {R package version 1.3-3},
@@ -443,6 +443,24 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   note =         {ISSN 1609-395X},
 }
 
+@ARTICLE{plummer:2006:CDO,
+  AUTHOR =       {Plummer, M and Best, N and Cowles, K and Vines, K},
+  TITLE =        {{CODA}: Convergence Diagnosis and Output Analysis for {MCMC}},
+  JOURNAL =      {R News},
+  YEAR =         {2006},
+  volume =       {6},
+  number =       {1},
+  pages =        {7--11},
+}
+
+@Manual{plummer:2012:CDO,
+  title  = {{coda}: Output Analysis and Diagnostics for {MCMC}},
+  author = {Plummer, M and Best, N and Cowles, K and Vines, K and Sarkar, D and Almond, R},
+  year   = {2012},
+  note   = {R package version 0.16},
+  url    = {http://CRAN.R-project.org/package=coda},
+}
+
 @BOOK{roche:1975:SM,
   AUTHOR =       {Roche, A F and Wainer, H and Thissen, D},
   TITLE =        {Skeletal maturity: The knee joint as a biological indicator},
@@ -468,6 +486,25 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   volume =       {18},
   number =       {2},
   pages =        {349--367},
+}
+
+@ARTICLE{smith:2007:BOA,
+  AUTHOR =       {Smith, B J},
+  TITLE =        {{boa}: An {R} Package for {MCMC} Output Convergence Assessment and
+                  Posterior Inference},
+  JOURNAL =      {Journal of Statistical Computing},
+  YEAR =         {2007},
+  volume =       {21},
+  number =       {11},
+  pages =        {1--37},
+}
+
+@Manual{smith:2008:BOA,
+  title  = {{boa}: {B}ayesian Output Analysis Program for {MCMC}},
+  author = {Smith, B J},
+  year   = {2008},
+  note   = {R package version 1.1.7},
+  url    = {http://CRAN.R-project.org/package=boa},
 }
 
 @MANUAL{smith:2014:MCMC,
