Revised introduction to MCMC software and MCMCsim.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -77,15 +77,6 @@
   address =      {New York},
 }
 
-@ARTICLE{breslow:1993:AIG,
-  AUTHOR =       {Breslow, N E and Clayton, D G},
-  TITLE =        {Approximate inference in generalized linear mixed models},
-  JOURNAL =      {Journal American Statistical Association},
-  YEAR =         {1993},
-  volume =       {88},
-  pages =        {9--25}
-}
-
 @ARTICLE{carlin:1992:ME2,
   AUTHOR =       {Carlin, J B},
   TITLE =        {Meta-analysis for 2 x 2 tables: a {B}ayesian approach},
@@ -433,6 +424,16 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   url    = {http://cran.r-project.org/web/views/Bayesian.html},
 }
 
+@ARTICLE{patil:2010:BSM,
+  author =	{Patil, A and Huard, D and Fonnesbeck, C J},
+  title =	{{PyMC}: {B}ayesian Stochastic Modelling in {P}ython},
+  journal =	{Journal of Statistical Software},
+  year =    {2010},
+  volume =	{35},
+  number =	{4},
+  pages =	{1--81},
+}
+
 @INPROCEEDINGS{plummer:2003:JAGS,
   AUTHOR =       {Plummer, M},
   TITLE =        {{JAGS}: A program for analysis of {B}ayesian graphical models using {G}ibbs sampling},
@@ -532,6 +533,14 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   volume =       {64},
   number =       {4},
   pages =        {583--639}
+}
+
+@MANUAL{statisticat:2014:LD,
+  TITLE =        {{LaplacesDemon}: Complete Environment for {B}ayesian Inference},
+  AUTHOR =       {{Statisticat, LLC}},
+  year =         {2014},
+  note =         {R package version 14.05.07},
+  url =          {http://www.bayesian-inference.com/software},
 }
 
 @ARTICLE{tierney:1994:MCE,
