Package renamed from MCMCsim to Mamba.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -509,11 +509,11 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
 }
 
 @MANUAL{smith:2014:MCMC,
-  title  = {{MCMCsim}: {M}arkov Chain {M}onte {C}arlo Simulation Toolkit for julia},
+  title  = {{Mamba}: {M}arkov Chain {M}onte {C}arlo Toolkit for {B}ayesian Analysis in {julia}},
   author = {Smith, B J and Contributors},
   year   = {2014},
   note   = {julia package version 0.0.1},
-  url    = {https://github.com/brian-j-smith/MCMCsim.jl}
+  url    = {https://github.com/brian-j-smith/Mamba.jl}
 }
 
 @MANUAL{spiegelhalter:1996:BIU,
