Update to version 0.0.3.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -509,10 +509,10 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
 }
 
 @MANUAL{smith:2014:MCMC,
-  title  = {{Mamba}: {M}arkov Chain {M}onte {C}arlo Toolkit for {B}ayesian Analysis in {julia}},
+  title  = {{Mamba}: {M}arkov Chain {M}onte {C}arlo for {B}ayesian Analysis in {julia}},
   author = {Smith, B J and Contributors},
   year   = {2014},
-  note   = {julia package version 0.0.2},
+  note   = {julia package version 0.0.3},
   url    = {https://github.com/brian-j-smith/Mamba.jl}
 }
 
