Add more references to required packages.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -201,7 +201,7 @@
   author = {Gelman, A and Su, Y-S and Yajima, M and Hill, J and Pittau, M G and Kerman, J
             and Zheng, T and Dorie, V},
   year   = {2014},
-  note   = {R package version 1.7},
+  note   = {R software package},
   url    = {http://CRAN.R-project.org/package=arm},
 }
 
@@ -308,6 +308,14 @@
   url =          {http://arxiv.org/abs/1111.4246},
 }
 
+@MANUAL{jones:2014:GP,
+  title  = {Gadfly},
+  author = {Jones, D C},
+  year   = {2014},
+  note   = {julia software package},
+  url    = {https://github.com/dcjones/Gadfly.jl},
+}
+
 @MISC{julia:2014,
   author = {Bezanson, J and Karpinski, S and Shah, V B and {other contributors}},
   year = {2014},
@@ -316,11 +324,12 @@
   url = {http://julialang.org/}
 }
 
-@MANUAL{juliastats:2014:DP,
-  title  = {Distributions Package},
-  author = {{Julia Statistics}},
+@MANUAL{bates:2014:DP,
+  title  = {Distributions},
+  author = {Bates, D and White, J M and Bezanson, J and Karpinski, S and
+            Shah, V B and {other contributors}},
   year   = {2014},
-  note   = {version 0.4},
+  note   = {julia software package},
   url    = {https://github.com/JuliaStats/Distributions.jl},
 }
 
@@ -342,6 +351,15 @@
   pages =        {3049--3067},
 }
 
+@MANUAL{lin:2014:SBP,
+  title  = {StatsBase},
+  author = {Lin, D and Byrne, S and Jensen, A N and Bates, D and White, J M and
+            Kornblith, S and {other contributors}},
+  year   = {2014},
+  note   = {julia software package},
+  url    = {https://github.com/JuliaStats/StatsBase.jl},
+}
+
 @ARTICLE{lindley:1972:BEL,
   AUTHOR =       {Lindley, D V and Smith, A F M},
   TITLE =        {Bayes estimates for the linear model (with discussion)},
@@ -351,13 +369,11 @@
   pages =        {1--44},
 }
 
-Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model (with discussion). J Roy Statist Soc B, 34, 1-44.
-
 @MANUAL{martin:2013:MCP,
   title  = {{MCMCpack}: {M}arkov Chain {M}onte {C}arlo {(MCMC)} Package},
   author = {Martin, A D and Quinn, K M and Park, J H},
   year   = {2013},
-  note   = {R package version 1.3-3},
+  note   = {R software package},
   url    = {http://CRAN.R-project.org/package=MCMCpack},
 }
 
@@ -458,7 +474,7 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   title  = {{coda}: Output Analysis and Diagnostics for {MCMC}},
   author = {Plummer, M and Best, N and Cowles, K and Vines, K and Sarkar, D and Almond, R},
   year   = {2012},
-  note   = {R package version 0.16},
+  note   = {R software package},
   url    = {http://CRAN.R-project.org/package=coda},
 }
 
@@ -504,7 +520,7 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   title  = {{boa}: {B}ayesian Output Analysis Program for {MCMC}},
   author = {Smith, B J},
   year   = {2008},
-  note   = {R package version 1.1.7},
+  note   = {R software package},
   url    = {http://CRAN.R-project.org/package=boa},
 }
 
@@ -512,7 +528,7 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   title  = {{Mamba}: {M}arkov Chain {M}onte {C}arlo for {B}ayesian Analysis in {julia}},
   author = {Smith, B J and Contributors},
   year   = {2014},
-  note   = {julia package version 0.1.0},
+  note   = {julia software package},
   url    = {https://github.com/brian-j-smith/Mamba.jl}
 }
 
@@ -540,7 +556,7 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   TITLE =        {{LaplacesDemon}: Complete Environment for {B}ayesian Inference},
   AUTHOR =       {{Statisticat, LLC}},
   year =         {2014},
-  note =         {R package version 14.05.07},
+  note =         {R software package},
   url =          {http://www.bayesian-inference.com/software},
 }
 
@@ -597,3 +613,18 @@ Lindley, D. V. and Smith, A. F. M. (1972). Bayes estimates for the linear model 
   note =         {DOI 10.3758/s13428-013-0369-3},
 }
 
+@MANUAL{white:2014:CP,
+  title  = {Calculus},
+  author = {White, J M and {other contributors}},
+  year   = {2014},
+  note   = {julia software package},
+  url    = {https://github.com/johnmyleswhite/Calculus.jl},
+}
+
+@MANUAL{white:2014:GP,
+  title  = {Graphs},
+  author = {White, J M and {other contributors}},
+  year   = {2014},
+  note   = {julia software package},
+  url    = {https://github.com/JuliaLang/Graphs.jl},
+}
