Update Mamba reference.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -524,9 +524,9 @@
   url    = {http://CRAN.R-project.org/package=boa},
 }
 
-@MANUAL{smith:2014:MCMC,
+@MANUAL{smith:2014:Mamba,
   title  = {{Mamba}: {M}arkov Chain {M}onte {C}arlo for {B}ayesian Analysis in {julia}},
-  author = {Smith, B J and Contributors},
+  author = {Smith, B J and other contributors},
   year   = {2014},
   note   = {julia software package},
   url    = {https://github.com/brian-j-smith/Mamba.jl}
