Update references and code for NUTS sampler.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -308,6 +308,17 @@
   url =          {http://arxiv.org/abs/1111.4246},
 }
 
+@ARTICLE{hoffman:2014:nuts,
+  author  = {Hoffman, M D and Gelman, A},
+  title   = {The {N}o-{U}-{T}urn Sampler: Adaptively Setting Path Lengths in
+             {H}amiltonian {M}onte {C}arlo},
+  journal = {Journal of Machine Learning Research},
+  year    = {2014},
+  volume  = {15},
+  pages   = {1593--1623},
+  url     = {http://jmlr.org/papers/v15/hoffman14a.html}
+}
+
 @MANUAL{jones:2014:GP,
   title  = {Gadfly},
   author = {Jones, D C},
