Add jaws example.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -131,6 +131,15 @@
   pages =        {443--460},
 }
 
+@ARTICLE{elston:1962:ETR,
+  author =       {Elston, R C and Grizzle, J E},
+  title =        {Estimation of time-response curves and their confidence bounds},
+  year =         {1962},
+  journal =      {Biometrics},
+  volume =       {18},
+  pages =        {148--159},
+}
+
 @ARTICLE{ezzet:1993:REM,
   author =       {Ezzet, F and Whitehead, J},
   title =        {A random effects model for ordinal responses from a crossover trial},
