Initial implementation of direct grid sampling.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -23,6 +23,15 @@
   pages =        {179--197}
 }
 
+@ARTICLE{bowmaker:1985:TTT,
+  AUTHOR =       {Bowmaker, J K and Jacobs, G H and Spiegelhalter, D J and Mollon, J D},
+  TITLE =        {Two types of trichromatic squirrel monkey share a pigment in the red-green region},
+  JOURNAL =      {Vision Research},
+  YEAR =         {1985},
+  volume =       {25},
+  pages =        {1937--1946},
+}
+
 @BOOK{box:1973:BIS,
   editor =       {Box, G E and Tiao, G C},
   TITLE =        {Bayesian Inference in Statistical Analysis},
@@ -503,6 +512,15 @@
   PUBLISHER =    {Plenum},
   YEAR =         {1975},
   address =      {New York},
+}
+
+@INBOOK{robert:1994:MDI,
+  AUTHOR =       {Robert, C},
+  editor =       {Gilks, W and Richardson, S and Spiegelhalter, D},
+  TITLE =        {{M}arkov chain {M}onte {C}arlo in practice},
+  CHAPTER =      {Mixtures of distributions: inference and estimation},
+  PUBLISHER =    {Chapman \& Hall},
+  YEAR =         {1994},
 }
 
 @BOOK{robert:2004:MCS,
