--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -158,6 +158,14 @@
   pages =        {901--907},
 }
 
+@MANUAL{fischer:2014:GV,
+  title  = {GraphViz},
+  author = {Fischer, Keno and {other contributors}},
+  year   = {2014},
+  note   = {julia software package},
+  url    = {https://github.com/Keno/GraphViz.jl},
+}
+
 @ARTICLE{frierich:1963:E6M,
   author =       {Frierich, E and Gehan, E},
   title =        {The effect of 6-mercaptopurine on the duration of steroid-induced
@@ -335,6 +343,15 @@
   volume  = {15},
   pages   = {1593--1623},
   url     = {http://jmlr.org/papers/v15/hoffman14a.html}
+}
+
+@MANUAL{johnson:2015:IJ,
+  title  = {IJulia},
+  author = {Johnson, Steven G and Perez, Fernando and Bezanson, Jeff and
+            Karpinski, Stefan and Fischer, Keno and {other contributors}},
+  year   = {2015},
+  note   = {julia software package},
+  url    = {https://github.com/JuliaLang/IJulia.jl},
 }
 
 @MANUAL{jones:2014:GP,
