Add Raftery-Lewis convergence diagnostic.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -523,6 +523,28 @@
   url    = {http://CRAN.R-project.org/package=coda},
 }
 
+@ARTICLE{raftery:1992:OLR,
+  AUTHOR =       {Raftery, A L and Lewis, S},
+  TITLE =        {Comment: {O}ne Long Run with Diagnostics: Implementation
+                  Strategies for {M}arkov Chain {M}onte {C}arlo},
+  JOURNAL =      {Statistical Science},
+  YEAR =         {1992},
+  volume =       {7},
+  number =       {4},
+  pages =        {493--497}
+}
+
+@INBOOK{raftery:1992:HMI,
+  AUTHOR =       {Raftery, A L and Lewis, S},
+  editor =       {Bernardo, J M and Berger, J O and Dawid, A P and Smith, A F M},
+  TITLE =        {{B}ayesian Statistics},
+  CHAPTER =      {How Many Iterations in the {G}ibbs Sampler?},
+  PUBLISHER =    {Oxford University Press},
+  YEAR =         {1992},
+  volume =       {4},
+  address =      {New York}
+}
+
 @BOOK{roche:1975:SM,
   AUTHOR =       {Roche, A F and Wainer, H and Thissen, D},
   TITLE =        {Skeletal maturity: The knee joint as a biological indicator},
