Add Heidelberger and Welch convergence diagnostic.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -325,6 +325,16 @@
   pages =        {97--109}
 }
 
+@ARTICLE{heidelberger:1983:SRL,
+  AUTHOR =       {Heidelberger, P and Welch, P},
+  TITLE =        {Simulation Run Length Control in the Presence of an Initial
+                  Transient},
+  JOURNAL =      {Operations Research},
+  YEAR =         {1983},
+  volume =       {31},
+  pages =        {1109--1144}
+}
+
 @ARTICLE{hoffman:2011:nuts,
   AUTHOR =       {Hoffman, M D and Gelman, A},
   TITLE =        {The {N}o-{U}-{T}urn Sampler: Adaptively Setting Path Lengths
