Expand documentation for convergence diagnostics.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -113,6 +113,16 @@
   YEAR =         {1994},
 }
 
+@ARTICLE{cowles:1996:MCM,
+  AUTHOR =       {Cowles, M K  and Carlin, B P},
+  TITLE =        {{M}arkov Chain {M}onte {C}arlo Convergence Diagnostics: A
+                  Comparative Review},
+  JOURNAL =      {Journal of the American Statistical Association},
+  YEAR =         {1996},
+  volume =       {91},
+  pages =        {883--904}
+}
+
 @ARTICLE{crowder:1978:BBA,
   author =       {Crowder, M},
   title =        {{B}eta-{B}inomial {ANOVA} for proportions},
