Add SAS MCMC reference.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -601,6 +601,14 @@
   pages =        {349--367},
 }
 
+@BOOK{sas:2015:MCMC,
+  AUTHOR =       {SAS Institute Inc.},
+  TITLE =        {The MCMC Procedure},
+  PUBLISHER =    {SAS Institute Inc.},
+  YEAR =         {2015},
+  address =      {Cary, NC},
+}
+
 @ARTICLE{smith:2007:BOA,
   AUTHOR =       {Smith, B J},
   TITLE =        {{boa}: An {R} Package for {MCMC} Output Convergence Assessment and
