Update BDS documentation.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -618,7 +618,7 @@
 
 @ARTICLE{schafer:2013:SMCB,
   AUTHOR  =      {Christian Andr\'{e} Sch\"{a}fer and Nicolas Chopin},
-  TITLE   =      {Sequential Monte Carlo on large binary sampling spaces},
+  TITLE   =      {Sequential {M}onte {C}arlo on large binary sampling spaces},
   JOURNAL =      {Statistics and Computing},
   YEAR    =      {2013},
   volume  =      {23},
