Slice Simplex Documentation

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -123,6 +123,17 @@
   pages =        {883--904}
 }
 
+@ARTICLE{cowles:2009:RAMPS,
+  AUTHOR =       {Cowles, M K  and Yan, J and Smith, B J},
+  TITLE =        {Reparameterized and Marginalized Posterior
+				  and Predictive Sampling for Complex
+				  Bayesian Geostatistical Models},
+  JOURNAL =      {Journal of Computational and Graphical Statistics},
+  YEAR =         {2009},
+  volume =       {2},
+  pages =        {262--282}
+}
+
 @ARTICLE{crowder:1978:BBA,
   author =       {Crowder, M},
   title =        {{B}eta-{B}inomial {ANOVA} for proportions},
