--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -497,6 +497,16 @@
   url =    {http://www.openbugs.net/Examples/Volumei.html},
 }
 
+@incollection{pakman:2013:hmcb, 
+    Title = {Auxiliary-variable Exact Hamiltonian Monte Carlo Samplers for Binary Distributions}, 
+    Url = {http://media.nips.cc/nipsbooks/nipspapers/paper_files/nips26/1176.pdf}, 
+    Booktitle = {Advances in Neural Information Processing Systems 26}, 
+    Author = {Ari Pakman and Liam Paninski}, 
+    Editor = {C.j.c. Burges and L. Bottou and M. Welling and Z. Ghahramani and K.q. Weinberger}, 
+    Year = {2013}, 
+    Pages = {2490--2498} 
+   }
+
 @MANUAL{park:2014:cran,
   title  = {{CRAN} Task View: Bayesian Inference},
   author = {Park, J H},
