--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -126,8 +126,8 @@
 @ARTICLE{cowles:2009:RAMPS,
   AUTHOR =       {Cowles, M K  and Yan, J and Smith, B J},
   TITLE =        {Reparameterized and Marginalized Posterior
-				  and Predictive Sampling for Complex
-				  Bayesian Geostatistical Models},
+                  and Predictive Sampling for Complex
+                  {B}ayesian Geostatistical Models},
   JOURNAL =      {Journal of Computational and Graphical Statistics},
   YEAR =         {2009},
   volume =       {2},
