Update references to OpenBUGS examples documentation.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -500,12 +500,12 @@
   note =         {[Online; accessed 5-March-2014]},
 }
 
-@MANUAL{openbugs:2014:ex1,
-  title  = {OpenBUGS Examples Volume I},
+@MANUAL{openbugs:2014:ex,
+  title  = {OpenBUGS Examples},
   author = {OpenBUGS Project Management Group},
   year   = {2014},
   note   = {version 3.2.3},
-  url =    {http://www.openbugs.net/Examples/Volumei.html},
+  url =    {http://www.openbugs.net/w/Examples},
 }
 
 @MANUAL{park:2014:cran,
