Add Chains methods for reading CODA files and concatenation.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -735,6 +735,15 @@
   url =          {http://www.openbugs.net/Manuals/Developer/Manual.html},
 }
 
+@MANUAL{spiegelhalter:2014:OUM,
+  TITLE =        {{OpenBUGS} User Manual},
+  author =       {Spiegelhalter, D and Thomas, A and Best, N and Lunn, D},
+  note =         {version 3.2.3},
+  month =        {March},
+  year =         {2014},
+  url =          {http://www.openbugs.net/Manuals/Manual.html},
+}
+
 @ARTICLE{wabersich:2013:EJT,
   AUTHOR =       {Wabersich, D and Vandekerckhove, J},
   TITLE =        {Extending {JAGS}: A tutorial on adding custom distributions to
