Implement asthma Model example for SliceSimplex.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -417,16 +417,6 @@
   address =      {New York},
 }
 
-@ARTICLE{lunn:2009:BUGS,
-  AUTHOR =       {Lunn, D and Spiegelhalter, D and Thomas, A and Best, N},
-  TITLE =        {The {BUGS} project: Evolution, critique and future directions},
-  JOURNAL =      {Statistics in Medicine},
-  YEAR =         {2009},
-  volume =       {28},
-  number =       {25},
-  pages =        {3049--3067},
-}
-
 @MANUAL{lin:2014:SBP,
   title  = {StatsBase},
   author = {Lin, D and Byrne, S and Jensen, A N and Bates, D and White, J M and
@@ -443,6 +433,24 @@
   YEAR =         {1972},
   volume =       {34},
   pages =        {1--44},
+}
+
+@ARTICLE{lunn:2009:BUGS,
+  AUTHOR =       {Lunn, D and Spiegelhalter, D and Thomas, A and Best, N},
+  TITLE =        {The {BUGS} project: Evolution, critique and future directions},
+  JOURNAL =      {Statistics in Medicine},
+  YEAR =         {2009},
+  volume =       {28},
+  number =       {25},
+  pages =        {3049--3067},
+}
+
+@BOOK{lunn:2012:BUGS,
+  AUTHOR =       {Lunn, D and Jackons, C and Best, N and Thomas A, and Spiegelhalter, D},
+  TITLE  =       {The {BUGS} Book: A Practical Introduction to Bayesian Analysis},
+  YEAR =         {2012},
+  PUBLISHER =    {Chapman \& Hall/CRC},
+  address =      {Boca Raton, FL}
 }
 
 @MANUAL{martin:2013:MCP,
