Binary Samplers with Example

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -461,6 +461,16 @@
   url    = {http://CRAN.R-project.org/package=MCMCpack},
 }
 
+@ARTICLE{mcdonald:1973:pol,
+  AUTHOR  =      {McDonald, G C and Schwing, R C},
+  TITLE   =      {Instabilities of Regression Estimates Relating Air Pollution to Mortality},
+  JOURNAL =      {Technometrics},
+  YEAR    =      {1973},
+  volume  =      {15},
+  number  =      {3},
+  pages   =      {463--481}
+}
+
 @ARTICLE{mcgilchrist:1991:RFS,
   AUTHOR =       {McGilchrist, C and Aisbett, C},
   TITLE =        {Regression with frailty in survival analysis},
@@ -514,6 +524,16 @@
   year   = {2014},
   note   = {version 3.2.3},
   url =    {http://www.openbugs.net/w/Examples},
+}
+
+@incollection{pakman:2013:hmcb,
+  title     = {Auxiliary-variable Exact Hamiltonian Monte Carlo Samplers for Binary Distributions},
+  url       = {http://media.nips.cc/nipsbooks/nipspapers/paper_files/nips26/1176.pdf},
+  booktitle = {Advances in Neural Information Processing Systems 26},
+  author    = {Ari Pakman and Liam Paninski},
+  editor    = {C.j.c. Burges and L. Bottou and M. Welling and Z. Ghahramani and K.q. Weinberger},
+  year      = {2013},
+  pages     = {2409--2498}
 }
 
 @MANUAL{park:2014:cran,
