--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -610,6 +610,16 @@
   edition =      {2nd},
 }
 
+@ARTICLE{roberts:1996:MALA,
+  AUTHOR  =      {Roberts, G O and Tweedie, R L},
+  TITLE   =      {Exponential Convergence of Langevin Distributions and Their Discrete Approximations},
+  JOURNAL =      {Bernoulli},
+  YEAR    =      {1996},
+  volume  =      {2},
+  number  =      {4},
+  pages   =      {341--363}
+}
+
 @ARTICLE{robert:2009:EAM,
   AUTHOR =       {Roberts, G O and Rosenthal, J S},
   TITLE =        {Examples of adaptive {MCMC}},
