Implement MALA sampler.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -308,6 +308,16 @@
   address =      {Boca Raton, FL},
 }
 
+@ARTICLE{girolami:2011:RMHMC,
+  AUTHOR  =      {Girolami, M and Calderhead, B},
+  TITLE   =      {Riemann manifold Langevin and Hamiltonian Monte Carlo methods},
+  JOURNAL =      {Journal of the Royal Statistical Society: Series B},
+  YEAR    =      {2011},
+  volume  =      {73},
+  number  =      {2},
+  pages   =      {123--214}
+}
+
 @ARTICLE{glynn:1991:EAV,
   AUTHOR =       {Glynn, P W and Whitt, W},
   TITLE =        {Estimating the asymptotic variance with batch means},
@@ -608,6 +618,26 @@
   YEAR =         {2004},
   address =      {New York},
   edition =      {2nd},
+}
+
+@ARTICLE{roberts:1996:MALA,
+  AUTHOR  =      {Roberts, G O and Tweedie, R L},
+  TITLE   =      {Exponential Convergence of Langevin Distributions and Their Discrete Approximations},
+  JOURNAL =      {Bernoulli},
+  YEAR    =      {1996},
+  volume  =      {2},
+  number  =      {4},
+  pages   =      {341--363}
+}
+
+@ARTICLE{roberts:2002:LD,
+  AUTHOR  =      {Roberts, G O and Stramer, O},
+  TITLE   =      {Langevin Diffusions and Metropolis-Hastings Algorithms},
+  JOURNAL =      {Methodology and Computing in Applied Probability},
+  YEAR    =      {2002},
+  volume  =      {4},
+  number  =      {4},
+  pages   =      {337--357}
 }
 
 @ARTICLE{robert:2009:EAM,
